# MPRA_ml

./: .gitignore  README.md  prelim.py  pyproject.toml
data/: prelim_analysis.py  preprocess_data.py
data/design/: README.md
data/expression/: rep1_pearson_correlation_matrix.csv  rep2_pearson_correlation_matrix.csv  rep3_pearson_correlation_matrix.csv
mpra_ml/: data_modules.py
mpra_ml/specs/: README.md
