[tool.poetry]
name = "mpra-ml"
version = "0.1.0"
description = ""
authors = ["Ross DeVito"]
readme = "README.md"
packages = [{include = "mpra_ml"}]

[tool.poetry.dependencies]
python = "^3.9"
pytorch-lightning = "^1.7.7"
numpy = "^1.23.3"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
